# deal_finder

./: .dockerignore  .gitignore  README.md  app.py  env.yaml  pyproject.toml
resources/: deal_finder.gs
src/: job_models.py  prompts.py
