[tool.poetry]
name = "deal_finder"
version = "0.1.0"
description = ""
authors = ["Cameron Goodhue"]
package-mode = false

[[tool.poetry.source]]
name = "standard"
url = "https://pypi.org/simple"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.0"
fastapi = "^0.115.6"
uvicorn = "^0.32.1"
pre-commit = "^3.2.2"

